--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.11.0",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
